# johnnydecimal.py

./: .gitignore  README.md  TODO.md  pyproject.toml
docs/: guide.md  omnifocus-integration.md
docs/plans/: 2026-03-05-staging-design.md  2026-03-05-staging-plan.md  2026-03-05-stats-design.md  2026-03-06-jd-claude-design.md  2026-03-06-jd-claude-plan.md  2026-03-08-omnifocus-consolidation-design.md  2026-03-08-omnifocus-consolidation-plan.md
johnnydecimal/: __init__.py  api.py  claude.py  cli.py  completion.py  exceptions.py  mcp_server.py  models.py  notes.py  omnifocus.py  policy.py  scope.py  staging.py  util.py
tests/: conftest.py  test_claude.py  test_ln.py  test_notes.py  test_notes_cli.py  test_omnifocus.py  test_omnifocus_cli.py  test_policy.py  test_staging.py  test_stats.py  test_validate_links.py
