[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "johnnydecimal"
version = "0.2.0"
description = "CLI for managing a Johnny Decimal filing system"
requires-python = ">=3.10"
dependencies = ["click>=8.0", "pyyaml>=6.0"]
license = "GPL-3.0-only"
readme = "README.md"
authors = [{ name = "Nelson Love" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Desktop Environment :: File Managers",
]

[project.urls]
Homepage = "https://github.com/nelsonlove/jd-cli"
Repository = "https://github.com/nelsonlove/jd-cli"
Issues = "https://github.com/nelsonlove/jd-cli/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
dev = ["pytest>=7.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
jd = "johnnydecimal.cli:cli"
